# handson-ml

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: california_housing.ipynb  decision_trees.ipynb  mnist.ipynb  spam_assassin.ipynb  svm.ipynb
