[tool.poetry]
name = "handson-ml"
version = "0.1.0"
description = ""
authors = ["Patrick Walsh <patrick.walsh@artemislab.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
